--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "Michał Ordon",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^3.3.6",
     "browserify": "^13.0.0",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^3.2.1",
     "gulp-open": "^1.0.0",
+    "jquery": "^2.2.2",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   }
