--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^3.2.1",
+    "gulp-eslint": "^2.0.0",
     "gulp-open": "^1.0.0",
     "jquery": "^2.2.2",
     "reactify": "^1.1.1",
