--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "browserify": "^13.0.0",
+    "flux": "^2.1.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^3.2.1",
     "gulp-eslint": "^2.0.0",
     "gulp-open": "^1.0.0",
     "jquery": "^2.2.2",
+    "react": "^0.14.7",
+    "react-router": "^2.0.1",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   }
