--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "browserify": "^13.0.0",
+    "eslint-plugin-react": "^4.2.3",
     "flux": "^2.1.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.0",
