--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gulp-open": "^1.0.0",
     "jquery": "^2.2.2",
     "react": "^0.14.7",
+    "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
