--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-eslint": "^2.0.0",
     "gulp-open": "^1.0.0",
     "jquery": "^2.2.2",
+    "lodash": "^4.6.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^2.0.1",
