--- a/package.json
+++ b/package.json
@@ -18,11 +18,12 @@
     "gulp-connect": "^3.2.1",
     "gulp-eslint": "^2.0.0",
     "gulp-open": "^1.0.0",
+    "history": "^1.17.0",
     "jquery": "^2.2.2",
     "lodash": "^4.6.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
-    "react-router": "^2.0.1",
+    "react-router": "^1.0.3",
     "reactify": "^1.1.1",
     "vinyl-source-stream": "^1.1.0"
   }
