--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^0.14.7",
     "react-router": "^1.0.3",
     "reactify": "^1.1.1",
+    "toastr": "^2.1.2",
     "vinyl-source-stream": "^1.1.0"
   }
 }
