--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "history": "^1.17.0",
     "jquery": "^2.2.2",
     "lodash": "^4.6.1",
+    "object-assign": "^4.0.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-router": "^1.0.3",
